--- a/_layouts/def.html
+++ b/_layouts/def.html
@@ -88,7 +88,7 @@
         .progress-bar {
     width: 15%;
     background-color: #020202;
-    /*border-left: 1px solid white; /* Add this line to set the left border */
+    border-left: 1px solid white; /* Add this line to set the left border */
     height: 100%;
     position: fixed; /* Fixes the progress bar in place */
     top: 0;
