--- a/_layouts/def.html
+++ b/_layouts/def.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Website with Centered Icons and Hover Area</title>
+    <title>{{page.title}}</title>
     <style>
         body {
             display: flex;
@@ -99,7 +99,7 @@
         hr {
             border: none;
             border-top: 1px solid white;
-            margin: 20px 0;
+            margin: 0px 0;
         }
 
         footer {
