--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,111 +2,65 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{{page.title}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: black;
-            margin: 1px;
-            padding: 0;
-            padding-top: 75px; /* Adjust this value based on the height of your header */
-            background-color:#020202;
-            
-        }
-        header {
-            font-size: 30px;
-            background-color: black;
-            color: #fff;
-            padding: 10px 0;
-            text-align: center;
-            position: fixed;
-            width: 100%;
-            top: 0;
-            z-index: 1000;
-        }
-        nav ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        nav ul li {
-            display: inline;
-            margin: 0 15px;
-        }
-        nav ul li a {
-            color: #fff;
-            text-decoration: none;
-        }
-        #Back {
-            padding: 1px;
-            margin: auto;
-            width: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        p {
-            //background-color: #050505;
-            color: #fff;
-            padding: 10px 0;
-            text-align: center;
-        }
-        footer {
-            background-color: #050505;
-            color: #fff;
-            text-align: center;
-            padding: 0px 0;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
-        }
-        @media (min-width: 600px) {
-            p {
-                font-size: 25px;
-            }
-        }
-        @media (min-width: 768px) {
-            p {
-                font-size: 30px;
-            }
-        }
-    </style>
+    <title>{{page.title}}</title>
+    <link rel="stylesheet" href="/assets/css/styles.css">
+    
+    <!-- Include Font Awesome for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="icon" href="/assets/img/icons/Redlii.ico" type="image/x-icon">
+
+    <!--{% seo %}-->
 </head>
+
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="/redlii">redlii</a></li>
-                <li><a href="/random">Random</a></li>
-                <li><a href="/about">About</a></li>
-                
-            </ul>
-        </nav>
-    </header>
-  
-  
-    <footer style="background-color: #050505;">
-       <audio id="bgm" loop>
-       <source src="BGM.wav">
-    	Your browser does not support the audio element.
-       </audio>
+    
+<script type="application/json" id="search-data">{% include post-feed.html %}</script>
+
+    <!-- Search Bar Container -->
+    <div class="search-bar-container">
+        <input type="search" id="search-bar" placeholder="Search..." class="search-bar">
+        <div class="search-result" id="search-results"></div>
+    </div>
+    <script type="application/json" id="search-data">
+        {% include post-feed.html %}
+    </script>
+
+    <div class="sidebar">
+        <a href="https://www.redlii.com"><img src="/assets/img/icons/Redlii.ico" alt="Redlii Icon" style="width: 30px; height: 30px; margin-right: 10px;"> <span>Redlii</span></a>
+        <a href="/"><i class="fas fa-home"></i> <span>Home</span></a>
+        <a href="/test"><i class="fas fa-random"></i> <span>Random</span></a>
+         <a href="/readme"><i class="fa-solid fa-circle-info"></i> <span>Readme</span></a>
+        <a href="/about"><i class="fas fa-envelope"></i> <span>About</span></a>
+        
+        <div class="sidebar-f"><!-- sidebar footer -->
+            <i class="fa-solid fa-bug"></i>
+            <i class="fa-solid fa-circle-half-stroke"></i>
+            <i id="yin-yang" class="fa-solid fa-yin-yang"></i>
+            <i class="fa-solid fa-magnifying-glass"></i>
+        </div>
+    </div>
+   
+    <div class="main-content">
+        <div class="content">
+            {{ content }}
+        </div>
+    </div>
+<!-- ------------------------------------- -->    
+    <div class="progress-bar">
+    	<div class="progress-bar-header">Index</div>
+    	<div class="index-content">
+    		{% include progess-bar.html %}
+    	</div>
+    </div>
+<!-- ------------------------------------- --> 
+    <hr>
+    <footer>
         <p style="font-size: 20px;">--- A Redlli Project ---</p>
         <p style="font-size: 15px;">©2025</p>
-        
     </footer>
-     <script>
-        document.addEventListener('click', function() {
-            var audioElement = document.getElementById('bgm');
-            audioElement.play();
-        });
+  <script src="/assets/js/mode.js"></script>
 
-        document.addEventListener('keydown', function(event) {
-            if (event.code === 'Space') {
-                var audioElement = document.getElementById('bgm');
-                audioElement.pause();
-            }
-        });
-    </script>
 </body>
 </html>
 
