--- a/_layouts/def.html
+++ b/_layouts/def.html
@@ -12,6 +12,16 @@
     {% seo %}
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=GV_SECRET}"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'GV_SECRET');
+</script>
+
 <body>
 
 <script type="application/json" id="search-data">{% include post-feed.html %}</script>
