--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="icon" href="/assets/img/icons/logo.png" type="image/x-icon">
 
-    {% seo %} </head>
+    {% seo %} 
+</head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=GV_SECRET}"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'GV_SECRET');
+</script>
 
 <body>
 
