--- a/_layouts/def.html
+++ b/_layouts/def.html
@@ -23,9 +23,6 @@
     {% seo %}
 </head>
 
-
-
-
 <body>
 
 <script type="application/json" id="search-data">{% include post-feed.html %}</script>
@@ -39,7 +36,7 @@
     <div class="sidebar">
         <a href="https://www.redlii.com" class="sidebar-link"><img src="/assets/img/icons/Redlii.ico" alt="Redlii Icon" style="width: 30px; height: 30px; margin-right: 10px;"> <span>Redlii</span></a>
         <a href="/" class="sidebar-link"><i class="fas fa-home"></i> <span>Home</span></a>
-        <a href="/test" class="sidebar-link"><i class="fas fa-random"></i> <span>Random</span></a>
+        <a href="/random" class="sidebar-link"><i class="fas fa-random"></i> <span>Random</span></a>
         <a href="/readme" class="sidebar-link"><i class="fa-solid fa-circle-info"></i> <span>Readme</span></a>
         <a href="/about" class="sidebar-link"><i class="fas fa-envelope"></i> <span>About</span></a>
 
@@ -58,6 +55,7 @@
     <div class="progress-bar"></div>
     <hr>
     <footer>
+    	<a class="linkhai" href="/contactus">Contact Us</a>
         <p style="font-size: 20px;">--- A Redlli Project ---</p>
         <p style="font-size: 15px;">©2025</p>
     </footer>
