--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -32,7 +32,7 @@
     <div class="sidebar">
         <a href="https://www.redlii.com"><img src="/assets/img/icons/Redlii.ico" alt="Redlii Icon" style="width: 30px; height: 30px; margin-right: 10px;"> <span>Redlii</span></a>
         <a href="/"><i class="fas fa-home"></i> <span>Home</span></a>
-        <a href="/test"><i class="fas fa-random"></i> <span>Random</span></a>
+        <a href="/random"><i class="fas fa-random"></i> <span>Random</span></a>
         <a href="/readme"><i class="fa-solid fa-circle-info"></i> <span>Readme</span></a>
         <a href="/about"><i class="fas fa-envelope"></i> <span>About</span></a>
 
@@ -63,6 +63,7 @@
     </div>
     <hr>
     <footer>
+    	<a class="linkhai" href="/contactus">Contact Us</a>
         <p style="font-size: 20px;">--- A Redlli Project ---</p>
         <p style="font-size: 15px;">©2025</p>
     </footer>
